# python_web_ex8_2

./: .env.example  pyproject.toml
ex_8_2/: connect.py  consumer.py  consumer_email.py  consumer_sms.py  definitions.py  models.py  producer.py
